--- a/config/database.yml
+++ b/config/database.yml
@@ -28,7 +28,7 @@ development:
   <<: *default
   database: coder-pinterest_development
   username: postgres
-  password: 123456
+  password: greycat1
   host: localhost
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -64,7 +64,7 @@ test:
   <<: *default
   database: coder-pinterest_test
   username: postgres
-  password: 123456
+  password: greycat1
   host: localhost
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
